package SmartHome.domain.valueObjects;

public enum OutdoorIndoor
{
    OUTDOOR,
    INDOOR
}
